--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <div class="section-header">
           <h2>About Us</h2>
-          <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p>
+          <p>We Deals With All Types Of LED Board, 3D Letters, Signs, Pixels Board, Flex Printing, HP Printing, Houses Name Plates, CNC Cutting, Jali Design, Metal Laser Cutting (MS, SS) etc., 3D Temples For Home.</p>
         </div>
 
         <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
